# catalogo-teses

./: README.md  catalogo.ipynb  pyproject.toml
catalogo_teses/: datasets.py
catalogos_capes/: __main__.py  datasets.py
